solve overflow issue with responsive table bootstrap class and our menu

--- a/css/style.css
+++ b/css/style.css
@@ -192,12 +192,10 @@ section.workout .card {
   border-radius: 18px !important;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.082);
   overflow: hidden;
-
 }
 section.workout .card img {
   height: 300px;
   object-fit: contain;
-  
 }
 
 section.workout .card a {
@@ -360,7 +358,7 @@ footer .footer-content .location p {
   min-width: 180px;
   position: absolute;
   top: 10%;
-  left: 60%;
+  left: -130%;
   z-index: 99;
   display: none;
 }
